[project]
name = "confluence-sync"
version = "0.1.0"
description = "Toveis-synkronisering mellom Confluence og lokalt Markdown-filhierarki"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "click>=8.1",
    "markdown>=3.6",
    "markdownify>=0.12",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
    "requests>=2.32",
    "rich>=13.7",
]

[project.scripts]
gira = "confluence_sync.cli_gira:main"
gonfluence = "confluence_sync.cli_gonfluence:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
rag = [
    "sentence-transformers>=2.7",
    "numpy>=1.26",
    "mcp>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/confluence_sync"]
